--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,10 +1,16 @@
 ﻿@model System.Security.Claims.ClaimsPrincipal
 
-<h1>Welcome</h1>
-<dl>
-    @foreach (var claim in Model.Claims)
-    {
-        <dt><b>@claim.Type</b></dt>
-        <dd><i>@claim.Value</i></dd>
-    }
-</dl>
+<!DOCTYPE html>
+
+<html>
+<body>
+    <h1>Welcome</h1>
+    <dl>
+        @foreach (var claim in Model.Claims)
+        {
+            <dt><b>@claim.Type</b></dt>
+            <dd><i>@claim.Value</i></dd>
+        }
+    </dl>
+</body>
+</html>
